Added solr/vendor directory